--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "antd": "^3.23.4",
     "babel-plugin-import": "^1.12.2",
     "babel-runtime": "^6.26.0",
+    "css-vars-ponyfill": "^2.1.2",
     "customize-cra": "^0.7.0",
     "echarts": "^4.4.0",
     "echarts-for-react": "^2.0.15-beta.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.4",
     "react-app-rewired": "^2.1.3",
     "react-beautiful-dnd": "^11.0.5",
     "react-document-title": "^2.0.3",
@@ -34,12 +36,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   }
 }
