--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.4",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "babel-runtime": "^6.26.0",
     "css-vars-ponyfill": "^2.1.2",
     "customize-cra": "^0.7.0",
     "echarts": "^4.4.0",
     "echarts-for-react": "^2.0.15-beta.1",
+    "http-proxy-middleware": "^0.20.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "moment": "^2.24.0",
